--- a/index.html
+++ b/index.html
@@ -69,10 +69,15 @@
 </div>
 
 <header>
-    <div class="white-circle" id="logo-box"><img id="disp-logo" src="https://i.postimg.cc/7f7ae7/image.png" style="width:80%;"></div>
-    <h1 class="dm-brand" id="disp-title"></h1>
-    <p class="owner-info" id="disp-owner"></p>
-    <div class="orange-pill">वाराणसी का नंबर 1 जन सेवा केंद्र</div>
+    <div class="white-circle" id="logo-box">
+        <img id="disp-logo" src="https://i.postimg.cc/7f7ae7/image.png" style="width:80%;">
+    </div>
+    <h1 class="dm-brand" id="disp-title">D.M <span>Cyber</span></h1>
+    <p class="owner-info" id="disp-owner">संचालक: धीरज मौर्या</p>
+    
+    <div class="orange-pill" style="border: 3px solid #ff851b; padding: 10px 30px; background: white; color: #ff851b; font-weight: bold; border-radius: 50px; display: inline-block;">
+        वाराणसी का नंबर 1 जन सेवा केंद्र
+    </div>
 </header>
 
 <div class="container">
@@ -351,4 +356,5 @@
 </script>
 </body>
 </html>
+
 
