--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
         title: "D.M <span>Cyber</span>",
         owner: "संचालक: धीरज मौर्या",
         loc: "📍 मंडाव, रोहनिया, वाराणसी",
-        services: ["आय प्रमाण", "जाति प्रमाण", "निवास प्रमाण", "पैन कार्ड", "आधार कार्ड"],
-        forms: ["यूपी पुलिस", "रेलवे भर्ती", "स्कॉलरशिप"],
-        rates: [{n: "नया पैन कार्ड", p: "₹100"}, {n: "आय/जाति/निवास", p: "₹80"}]
+        services: ["ड्राइविंग लाइसेंस {DL}", "पासपोर्ट", "P.F.Fund", "रेलवे / हवाई / बस टिकट",  "आय / जाति / निवास प्रमाण पत्र", "EWS प्रमाण पत्र", "जीवन प्रमाण पत्र", "पैन कार्ड नया/सुधार/डाउनलोड", "आधार कार्ड नया/सुधार/डाउनलोड", "वोटर कार्ड नया/सुधार/डाउनलोड", "तत्काल पासपोर्ट साइज फोटो", "राशन कार्ड नया/सुधार/डाउनलोड", "ई श्रमिक कार्ड नया/सुधार/डाउनलोड", "आयुष्मान कार्ड", "वृद्ध / विधवा / विकलांग पेंशन फॉर्म", "यूनिक डिसेबिलिटी आइडेंटिटी कार्ड", "आधार से पैसे निकालना", "हिन्दी / अंग्रेजी टाइपिंग"],
+        forms: ["Lekhpal Form", "Bihar Staff Selection Form", "Delhi Subordinate Service Selection Form"],
+        rates: [{n: "सभी फॉर्म", p: "₹100"}, {n: "पैन कार्ड नया/सुधार/डाउनलोड", p: "₹200/300"}, {n: "आय / जाति / निवास प्रमाण पत्र", p: "₹100"}, {n: "हिन्दी / अंग्रेजी टाइपिंग", p: "₹30/20"}]
     };
 
     function renderUI() {
@@ -312,3 +312,4 @@
 </script>
 </body>
 </html>
+
